deployments/home-assistant/ingress-staging.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: home-assistant
  namespace: default
spec:
  tls:
    - hosts:
        - $HOME_ASSISTANT_DOMAIN
      secretName: home-assistant-tls
  rules:
    - host: $HOME_ASSISTANT_DOMAIN
      http:
        paths:
          - path: "/*"
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
